--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DatingApp</title>
+  <title>MatchFinder</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&family=Sora&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
   </style>
 </head>
 
