--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 
-<body>
+<body id="indexBody" style="background-color: rgb(243, 243, 243);">
   <app-root></app-root>
 </body>
 
